Make opens module specific, give an indication as to where they are needed